Documentation edits made through Mintlify web editor

--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Introdução"
-description: "Example section for showcasing API endpoints"
+description: "Exemplo de alteração
+"
 ---
 
 <Note>
